--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@material-ui/core": "^4.11.3",
     "jest": "^26.6.3",
     "next": "^10.0.9",
+    "prettier": "^2.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
