--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Jeane-LLC/dungeon-chat#readme",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "jest": "^26.6.3",
     "next": "^10.0.9",
     "prettier": "^2.2.1",
