--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-window": "^1.8.6",
     "redis": "^3.0.2"
   },
   "devDependencies": {
