--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "typescript": "^4.2.3"
   }
 }
