--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "jest": "^26.6.3",
     "next": "^10.0.9",
     "prettier": "^2.2.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-window": "^1.8.6",
     "redis": "^3.0.2"
   },
   "devDependencies": {
+    "@types/prop-types": "^15.7.3",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "typescript": "^4.2.3"
