--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,14 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+      "strict": true,
+      "alwaysStrict":true,
+      "noImplicitAny":true,
+      "noImplicitThis":true,
+      "strictNullChecks":true,
+      "strictBindCallApply":true,
+      "strictFunctionTypes":true,
+      "strictPropertyInitialization":true,      
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
