--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
+    "@vercel/client": "^9.0.8",
     "jest": "^26.6.3",
     "next": "^10.0.9",
+    "package.json": "^2.0.1",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
